feat(persistence): implement book and author persistence
Maps the Book and Author entities and their relationship using JPA. Implements the BookService to handle the persistence logic through their respective repositories. Adds a console menu to allow users to save books and query all registered books from the database.